Added changes for upcoming release

--- a/loos.dox
+++ b/loos.dox
@@ -1682,6 +1682,33 @@ at loos.maintainer [at] gmail.com
 namespace loos {
 
 /*! \page Changes Change Log
+\section release232 Version 2.3.2 (7-XX-2016)
+\subsection r232_bugs Bug Fixes
+<ul>
+  <li> Added HSD, HSE, and HSP as recognized residues for backbone selector
+  <li> Fixed bug in center-molecule affecting --center_xy
+  <li> Fixd bug in fullhelp for serialize-selection
+  <li> Fixed bug in aligner where --xyonly was ignored if using a reference structure
+  <li> Fixed bug in membrane_map when using a reference structure
+  <li> Fixed bug in PyLOOS that made XTCWriter unavailable
+  <li> Fixed bug in density-dist when using the number calculation
+  <li> Fixed bug in Amber prmtop reader that affects Ubuntu 16
+</ul>
+
+\subsection r232_add_changed Added, Changed, and Otherwise Notable
+<ul>
+  <li> Changed the organization of LOOS source tree so that the core library
+       resides in the src/ directory.
+  <li> Changed how documentation is built (now automatic for GitHub users)
+  <li> Added inside_helices.py tool to PyLOOS
+  <li> Added --positive and --negative flags to enmovie to control which direction motion is depicted
+  <li> Added ability to write Gromacs .gro files
+  <li> Added new cylindrical-thickness tool
+  <li> Added verap tool for quick vertical area profiles (non-voronoi)
+  <li> Added (officially) the functions in utils_structural.cpp to PyLOOS
+</ul>
+
+
 \section release231 Version 2.3.1 (1-11-2016)
 \subsection r231_bugs Bug Fixes
 <ul>
