updated docs to list downloading releases from sourceforge and github [ci skip]

--- a/loos.dox
+++ b/loos.dox
@@ -22,8 +22,8 @@ Our email address has changed.  Please use loos.maintainer@gmail.com to contact 
 <hr>
 
 <h2>Quick Links</h2>
-      -  <a href="http://sourceforge.net/projects/loos">Download LOOS at http://sourceforge.net/projects/loos</a>
-      -  <a href="https://github.com/GrossfieldLab/loos">Clone LOOS from GitHub</a>
+      -  Download a LOOS release from <a href="http://sourceforge.net/projects/loos">Sourceforge</a> or <a href="https://github.com/GrossfieldLab/loos/releases">GitHub</a>
+      - <a href="https://github.com/GrossfieldLab/loos">Clone LOOS from GitHub</a>
       -  <a href="https://lists.sourceforge.net/lists/listinfo/loos-announce">Subscribe to the announcements mailing list</a>
       -  <a href="http://sourceforge.net/projects/loos/files/loos%20material/loos_talk_2013_2.pdf/download">Download a tutorial (pdf) on using LOOS</a>
       -  Ask the developers a question at loos.maintainer@gmail.com or by posting to one of the mailing lists.
