--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2016-07-11    <alan@membrane>
+
+	* Added periodicity support to native_contacts
+
 2016-07-08    <tromo@hill>
 
 	* Added support for unpacking prebuilt docs tarball
