--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2016-07-11    <alan@membrane>
 
 	* Added periodicity support to native_contacts
+	* Fixed (tromo) bug in doxygen handling that cause docs to be rebuilt excessively
 
 2016-07-08    <tromo@hill>
 
